fixed spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -21,6 +21,7 @@ label {
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
+    margin-bottom: 10px;
 }
 
 #input_text {
